--- a/package.json
+++ b/package.json
@@ -11,18 +11,22 @@
   },
   "dependencies": {
     "@react-oauth/google": "^0.12.1",
+    "@tanstack/react-query-devtools": "^5.51.23",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.0",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-query": "^3.39.3",
+    "react-query-devtools": "^2.6.3"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "5.0.2",
     "@graphql-codegen/client-preset": "^4.3.3",
     "@graphql-codegen/introspection": "4.0.3",
+    "@tanstack/react-query": "^5.51.23",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
